[gd_scene format=3 uid="uid://csyfac6j78ehj"]

[ext_resource type="Texture2D" uid="uid://b06cx1g40h3cj" path="res://Assets/caffee-en-cafÃ©-mesa-y-borrosa.webp" id="1_1buso"]
[ext_resource type="Script" uid="uid://dlb8fbxka6fnd" path="res://Scenes/caffeteria_level.gd" id="1_jmqqm"]
[ext_resource type="Texture2D" uid="uid://dca41pslvu35c" path="res://Assets/vecteezy_close-up-hand-holding-holding-black-mobile-phone-with-blank_47598452.png" id="2_fngo7"]
[ext_resource type="AudioStream" uid="uid://bcnrcj81nntwa" path="res://Music/Double Click Mouse Sfx.wav" id="4_q6qvt"]
[ext_resource type="AudioStream" uid="uid://y3xopdqsxi6c" path="res://Music/Win sound.wav" id="5_0pbvd"]
[ext_resource type="AudioStream" uid="uid://d4hghnooplsxh" path="res://Music/error.ogg" id="6_wwpe8"]

[sub_resource type="LabelSettings" id="LabelSettings_fngo7"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a2phn"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lpr5h"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_a2phn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpr5h"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jmqqm"]
font_size = 34

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2phn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmqqm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6qvt"]
bg_color = Color(0, 0, 0, 1)

[node name="CaffeteriaLevel" type="Control" unique_id=911281019]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmqqm")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=436027542]
z_index = -1
position = Vector2(576.00006, 324)
scale = Vector2(1.8815362, 1.5857843)
texture = ExtResource("1_1buso")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=242525191]
layout_mode = 0
offset_left = 422.0
offset_top = 36.0
offset_right = 709.0
offset_bottom = 593.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer" unique_id=2104197489]
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="PanelContainer" unique_id=134229420]
z_index = 2
position = Vector2(167.00056, 286.03287)
scale = Vector2(0.24241967, 0.24373986)
texture = ExtResource("2_fngo7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1277429816]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=1195111783]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1110718739]
layout_mode = 2
text = "Options:"
label_settings = SubResource("LabelSettings_fngo7")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1084229828]
layout_mode = 2
text = "Wifi and connections"
label_settings = SubResource("LabelSettings_a2phn")

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=278229578]
layout_mode = 2
text = "WIFI networks available:"
label_settings = SubResource("LabelSettings_lpr5h")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1659969705]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=32603300]
layout_mode = 2
text = "Coffee_Wifi_Free     "

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=1205047923]
layout_mode = 2
text = "Samsung flip7 ðŸ”’               "

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=212333457]
layout_mode = 2
text = "Jhon Phone 4 ðŸ”’                 "

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=550007169]
layout_mode = 2
text = "WorkersOnly ðŸ”’      "

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=944848438]
layout_mode = 2
text = "Totaly_Not_A_Scammer   "

[node name="Button6" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer" unique_id=1278695909]
layout_mode = 2
text = "Dont Connect to any network"

[node name="FirstPopup" type="PanelContainer" parent="." unique_id=773652890]
z_index = 3
layout_mode = 0
offset_left = 181.0
offset_top = 120.0
offset_right = 1051.0
offset_bottom = 367.0
theme = SubResource("Theme_a2phn")
theme_override_styles/panel = SubResource("StyleBoxFlat_lpr5h")

[node name="Label" type="Label" parent="FirstPopup" unique_id=1818782437]
layout_mode = 2
text = "You want to check your bank account in your phone 
but you spended all your data plan already
 so you need to conect to the wifi in order to do that. 
What will you choose? 
"
label_settings = SubResource("LabelSettings_jmqqm")

[node name="Button_Okey" type="Button" parent="FirstPopup" unique_id=1762764139]
layout_mode = 2
size_flags_vertical = 8
text = "Continue"

[node name="Password" type="PanelContainer" parent="." unique_id=290363313]
visible = false
z_index = 3
layout_mode = 0
offset_left = 172.0
offset_top = 183.0
offset_right = 1042.0
offset_bottom = 380.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a2phn")

[node name="Label" type="Label" parent="Password" unique_id=1724040105]
layout_mode = 2
text = "You dont have the password required 
to connect to that network"
label_settings = SubResource("LabelSettings_jmqqm")

[node name="Close" type="Button" parent="Password" unique_id=1779893475]
layout_mode = 2

[node name="BadAnswer" type="PanelContainer" parent="." unique_id=1715795991]
visible = false
z_index = 3
layout_mode = 0
offset_left = 156.0
offset_top = 180.0
offset_right = 1026.0
offset_bottom = 377.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jmqqm")

[node name="Label" type="Label" parent="BadAnswer" unique_id=1957493540]
layout_mode = 2
text = "Wrong!
your data will be in danger if you use a public wifi. 
Anyone can enter and steal your data."
label_settings = SubResource("LabelSettings_jmqqm")

[node name="Close_Bad" type="Button" parent="BadAnswer" unique_id=145227454]
layout_mode = 2

[node name="GoodAnswer" type="PanelContainer" parent="." unique_id=797911859]
visible = false
z_index = 3
layout_mode = 0
offset_left = 142.0
offset_top = 193.0
offset_right = 1099.0
offset_bottom = 440.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q6qvt")

[node name="Label" type="Label" parent="GoodAnswer" unique_id=1420063946]
layout_mode = 2
text = "Good Choice!
This is really the best option in this specific situaton.
If you want to log in something important or confident, try
to use a secure network if posible, if dont, abstend to do it
and try later in your home."
label_settings = SubResource("LabelSettings_jmqqm")

[node name="Close_Good" type="Button" parent="GoodAnswer" unique_id=1852173745]
layout_mode = 2

[node name="SfxClick" type="AudioStreamPlayer" parent="." unique_id=293804494]
stream = ExtResource("4_q6qvt")

[node name="SfxSuccess" type="AudioStreamPlayer" parent="." unique_id=136518561]
stream = ExtResource("5_0pbvd")

[node name="SfxError" type="AudioStreamPlayer" parent="." unique_id=1589352802]
stream = ExtResource("6_wwpe8")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="FirstPopup/Button_Okey" to="." method="_on_button_okey_pressed"]
[connection signal="pressed" from="Password/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="BadAnswer/Close_Bad" to="." method="_on_close_bad_pressed"]
[connection signal="pressed" from="GoodAnswer/Close_Good" to="." method="_on_close_good_pressed"]
